--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
     - name: "Faz Checkout do Código Fonte"
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     
     - name: "Instala o SDK do .NET Core 3.1 no Runner"
       uses: actions/setup-dotnet@v1
