--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,33 @@ jobs:
         name: ${{ env.NOME_ARTEFATO }}
         path: ${{ env.CAMINHO_PUBLISH }}     
 
+ deploy-dev:
+   if: github.ref == 'refs/heads/developer'
+   runs-on: ubuntu-latest
+   needs: [build]
+   steps:
+    - name: Task 1 Exemplo
+      if: success()
+      run: echo 'Task 1 Exemplo '                    
+ 
+ deploy-prod:
+   if: github.ref == 'refs/heads/master'
+   runs-on: ubuntu-latest
+   needs: [build]
+   steps:
+    - name: Download do Artefato Gerado pelo Job de Build
+      uses: actions/download-artifact@v2.0.8
+      with:
+        name: ${{ env.NOME_ARTEFATO }}
+        path: ${{ env.CAMINHO_PUBLISH }}
+      
+    - name: Login no Azure
+      uses: Azure/login@v1.1
+      with:
+       creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deployment no Azure App Service
+      uses: Azure/webapps-deploy@v2
+      with:
+       app-name: ${{ env.NOME_WEBAPP_AZURE }}
+       package: ${{ env.CAMINHO_PUBLISH }}
